# Deposito_Tromboni_CORSO-AI

./: internet_flow.html  my_flow_plot.html  prova.py  ragas_results.csv
26 Agosto flows/progetto_crew_flows/: DOCUMENT_LENGTH_OPTIMIZATION.md  EVALUATION_README.md  README.md  WebRAG_flow_diagram.html  agent_flow_diagram.html  evaluation_demo.py  evaluation_simple_demo.py  output_football_premier league_20250901_170038.json  output_football_premier league_20250902_141218.json  output_football_serie a_20250901_163943.json  output_medicine_cardiology_20250901_174751.json  output_medicine_cardiology_20250903_095623.json  pyproject.toml  rag_evaluation_qdrant.py  rag_qdrant_hybrid.py  test_chunks.py  test_database_crew_basic.py  test_database_crew_integration.py  test_database_quality.py  test_embedding_dimensions.py  test_endtoend_final.py  test_evaluation_final_clean.py  test_evaluation_system.py  test_evaluation_system_final.py  test_final_rag.py  test_qdrant_database.py  test_qdrant_tools_integration.py  test_rag_crew.py  test_rag_crew_final.py  test_rag_tools.py  test_rag_tools_final.py  test_ragas_evaluation.py  test_ragas_simple.py  test_routing_final.py  test_store.py  test_web_search.py
26 Agosto flows/progetto_crew_flows/RAG_database/: index.faiss  index.pkl
26 Agosto flows/progetto_crew_flows/RAG_database/documents/football/: football_premier_league_comprehensive_overview_0.json  football_serie_a_comprehensive_overview_0.json
26 Agosto flows/progetto_crew_flows/evaluation_results/: evaluation_AI_machine_learning_20250905_183508.json  evaluation_AI_machine_learning_20250905_183750.json  evaluation_database_nosql_20250905_183505.json  evaluation_devops_containerization_20250905_183507.json  evaluation_history.jsonl  evaluation_programming_machine_learning_20250905_183504.json
26 Agosto flows/progetto_crew_flows/output/: complete_guide.md  guide_outline.json
26 Agosto flows/progetto_crew_flows/qdrant_database/: index.faiss  index.pkl
26 Agosto flows/progetto_crew_flows/src/progetto_crew_flows/: WebRAG_flow.py  geografia_flow.html  guide_creator_flow.py  internet_flow.py  llmflow.py  main.py  models.py  prova.py
26 Agosto/progetto_crewai/: README.md  pyproject.toml
26 Agosto/progetto_crewai/src/progetto_crewai/: crew.py  main.py
(+79 files in other folders)
