[project]
name = "progetto_crew_flows"
version = "0.1.0"
description = "progetto_crew_flows using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0",
    "duckduckgo-search>=6.2.0",
]

[project.scripts]
kickoff = "progetto_crew_flows.main:kickoff"
run_crew = "progetto_crew_flows.main:kickoff"
plot = "progetto_crew_flows.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
