[project]
name = "progetto_crewai"
version = "0.1.0"
description = "progetto_crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
progetto_crewai = "progetto_crewai.main:run"
run_crew = "progetto_crewai.main:run"
train = "progetto_crewai.main:train"
replay = "progetto_crewai.main:replay"
test = "progetto_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
